<resources>
    <string name="app_name">Movie_poster</string>
    <string name="home_page">Домашняя</string>
    <string name="search_page">Поиск</string>
    <string name="profile_page">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_image">poster_image</string>
    <string name="hint_search_field">Введите название фильма/сериала</string>
    <string name="btn_search">Поиск</string>
    <string name="et_poster_title">Рокки Бальбоа</string>
    <string name="year_of_release">Год релиза: 2020</string>
    <string name="film_duration">Продолжительность: 2:10</string>
    <string name="film_genre">Жанр: боевик, драмма, триллер</string>
    <string name="film_description">Описание: %</string>
</resources>