<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.PosterFragment">


    <ImageView
        android:id="@+id/film_image"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:contentDescription="@string/poster_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/poster_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/et_poster_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/film_image"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/rating_bar"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:stepSize="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/film_image"
        app:layout_constraintTop_toBottomOf="@id/poster_title" />

    <TextView
        android:id="@+id/poster_year"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/year_of_release"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/film_image"
        app:layout_constraintTop_toBottomOf="@id/rating_bar" />

    <TextView
        android:id="@+id/poster_duration"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/film_duration"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/film_image"
        app:layout_constraintTop_toBottomOf="@id/poster_year" />

    <TextView
        android:id="@+id/poster_genre"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/film_genre"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/film_image"
        app:layout_constraintTop_toBottomOf="@id/poster_duration" />

    <TextView
        android:id="@+id/poster_description"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/film_description"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/film_image"
        app:layout_constraintTop_toBottomOf="@id/poster_genre" />

</androidx.constraintlayout.widget.ConstraintLayout>